--- a/angular.json
+++ b/angular.json
@@ -94,8 +94,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
-  }
+  },
+ "defaultProject": "cicddrei"
 }
