--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         #npm run ng build --base-href="https://jojonowack.github.io/AngularTest/"
 
         #npx angular-cli-ghpages --dir=dist/cicd-test-project --no-silent
-        ng deploy --base-href=/cicddrei/
+        npm run ng deploy --base-href=/cicddrei/
